# myprelude

./: Err.hs  ErrorOr.hs  ErrorUtils.hs  MyPrelude.hs  PVar.hs  RecordParser.hs  RecordParser2.hs  Result.hs  Setup.hs  Utils.hs  Validation.hs  myprelude.cabal  stack.yaml
benchmarks/: bench.hs
tests/: test.hs
