name:                myprelude
version:             0.7.8.0
cabal-version:       >=1.10
build-type: Simple

library
  exposed-modules:     MyPrelude, Err, Result, Validation, RecordParser, RecordParser2
  other-modules:       PVar, Utils
  build-depends:       base >= 4.7 && < 5, filepath, containers, mtl, transformers, nicify-lib, time, directory, lens, MissingH, data-default
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends: base, myprelude, tasty, tasty-quickcheck, data-ordlist

Benchmark bench
    type:           exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    main-is:        bench.hs
    build-depends:  base, time, myprelude, criterion, dlist, data-ordlist, containers
    ghc-options:    -O2